<resources>
    <string name="app_name">Otaku</string>
    <string name="an_error_has_occurred">Произошла ошибка: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="not_found">не найдено</string>
    <!-- Fragment Details strings -->
    <string name="fragment_details_tvKind_text">KIND</string>
    <string name="fragment_details_ivImageBackground_contentDescription">Image Background</string>
    <string name="fragment_details_ivGradientImage_contentDescription">Gradient Image</string>
    <string name="fragment_details_tvScore_text">x.xx</string>
    <string name="fragment_details_tvTitle_text">TITLE</string>
    <string name="fragment_details_tvTitleRussian_text">Заголовок</string>
    <string name="fragment_details_ivImage_contentDescription">Image</string>
    <string name="fragment_details_tvEpisodeTitle_text">Эпизоды:</string>
    <string name="fragment_details_tvEpisode_text">xx</string>
    <string name="fragment_details_tvStatusTitle_text">Статус:</string>
    <string name="fragment_details_tvStatus_text">status</string>
    <string name="fragment_details_tvDateTitle_text">Дата выпуска:</string>
    <string name="fragment_details_tvDate_text">xx.xx.xxxx</string>
    <string name="fragment_details_tvGenreTitle_text">Жанры</string>
    <string name="fragment_details_tvDescriptionTitle_text">Описание</string>
    <string name="fragment_details_expand_collapse_contentDescription">Description button</string>
    <string name="fragment_details_tvTitleScreenshots_text">Кадры</string>
    <string name="fragment_details_tvTitleVideos_text">Видео</string>
    <string name="fragment_details_tvTitleCharacters_text">Персонажи</string>
    <string name="fragment_details_tvTitleAutors_text">Авторы</string>
    <string name="fragment_details_tvTitleFranchises_text">Связаное</string>
    <string name="fragment_details_tvTitleStudios_text">Лицензировано</string>
    <!-- Items strings -->
    <string name="item_details_franchises_ivImageFranchisesItem_contentDescription">Image Franchise</string>
    <string name="item_details_characters_ivImageCharactersItem_contentDescription">Image Character</string>
    <string name="item_details_ivImageAutorsItem_contentDescription">Image Autor</string>
    <string name="item_details_screenshots_ivImageScreenshotsItem_contentDescription">Image Screenshot</string>
    <string name="item_details_studios_ivImageStudioItem_contentDescription">Studio Image</string>
    <string name="item_details_videos_ivImageVideoItem_contentDescription">Image Video</string>
    <string name="item_home_poster_ivImagePoster_contentDescription">Image Poster</string>
    <string name="item_home_poster_tvTitlePoster_text">Otaku</string>
    <string name="item_home_genres_item_ivImageHomeGenre_contentDescription">Image Home Genre</string>

    <string name="default_notification_channel_id" translatable="false">default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="foreground_notification_channel_id" translatable="false">foreground_channel</string>
    <string name="foreground_notification_channel_name" translatable="true">Foreground</string>


    <string name="status_content_text">%1$s / %2$s</string>
    <string name="fragment_details_ivBackPressed_contentDescription">Back Pressed Icon</string>
    <string name="fragment_search_svFragmentSearchSearch_queryHint">Поиск…</string>
    <string name="fragment_settings_tvFragmentSettingsTitle_text">Настройки</string>
    <string name="fragment_settings_sFragmentSettingsNotificationPush_text">Push-уведомления</string>
    <string name="navigation_bottom_homeFragment_title">Домашняя</string>
    <string name="navigation_bottom_searchFragment_title">Поиск</string>
    <string name="navigation_bottom_settingsFragment_title">Настройки</string>

    <string name="episode_text">Эпизодов: %1$s</string>

    <string name="notification_channel_id">Notification Push</string>
    <string name="default_notification_title">Otaku</string>
    <string name="item_home_random_ivItemHomeRandomRefresh_contentDescription">Refresh Icon</string>
    <string name="item_home_random_tvItemHomeRandomTitle_text">Случайное</string>
    <string name="item_episodes_header_root_text">Эпизоды</string>
    <string name="fragment_details_btWatch_text">Смотреть</string>
    <string name="is_favorites">В избранном</string>
    <string name="is_not_favorites">Добавить в избранное</string>
    <string name="isSaved">Смотрю</string>

    <string name="romantic_title">"Романтика"</string>
    <string name="shounen_title">"Сёнен"</string>
    <string name="drama_title">"Драма"</string>
    <string name="demon_title">"Демоны"</string>
    <string name="shoujo_title">"Сёдзе"</string>
    <string name="harem_title">"Гарем"</string>
    <string name="navigation_bottom_mangaFragment_title">Манга</string>
    <string name="navigation_bottom_animeFragment_title">Аниме</string>

    <string name="tabView_home_title">Главная</string>
    <string name="tabView_search_title">Поиск</string>

    <string name="fragment_settings_sFragmentSettingsUkraineLocale_text">Украинский язык (Beta)</string>
    <string name="fragment_settings_tvLanguageSettings_text">Настроить (клик)</string>
    <string name="fragment_settings_sFragmentSettingsSearchCensored_text">Поиск без цензуры</string>
    <string name="fragment_episodes_item_text">"Эпизод: %1$s"</string>
    <string name="fragment_manga_tvTitle_text">В разработке</string>
    <string name="dialog_setting_language_sIsTitle_text">Заголовки</string>
    <string name="dialog_setting_language_btComplete_text">Готово</string>
    <string name="dialog_setting_language_sIsName_text">Название</string>
    <string name="dialog_setting_language_sIsDescription_text">Описание</string>
    <string name="dialog_setting_language_tvTitle_text">Выбор перевода</string>
    <string name="layout_person_role_tvTitle_text">Работы</string>

    <string name="day_mode">Светлая</string>
    <string name="night_mode">Темная</string>
    <string name="auto_mode">Системная</string>
    <string-array name="themes">
        <item>@string/day_mode</item>
        <item>@string/night_mode</item>
        <item>@string/auto_mode</item>
    </string-array>

    <string name="theme_message">Для завершения изменений перезагрузите приложение!</string>
    <string name="message_ukraine_language">Внимание! Эта функция под Бета-тестированием! Перевод в некоторых местах может быть не корректным! </string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="user_agreement_submit">Принимаю</string>
    <string name="user_agreement_title">Пользовательское соглашение</string>
    <string name="user_agreement">Важно!\nВсе авторские права и товарные знаки принадлежат их авторам. Весь контент, представленный в приложении взят из ОТКРЫТЫХ источников в Интернете. Если Вы уверены, что какое-либо содержимое, отображаемое в приложении нарушает Ваши авторские права, немедленно сообщите об этом разработчику приложения.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_bottom_userFragment_title">Аккаунт</string>

    <string name="status_completed_text">Просмотрено (%1$s)</string>
    <string name="status_planned_text">Запланировано (%1$s)</string>
    <string name="status_watching_text">Смотрю (%1$s)</string>
    <string name="status_on_hold_text">Отложено (%1$s)</string>
    <string name="status_dropped_text">Брошено (%1$s)</string>
    <string name="status_rewatching_text">Пересматриваю (%1$s)</string>
    <string name="layout_user_stats_tvTitle_text">Список Аниме</string>
    <string name="layout_user_favorites">Избранные</string>
    <string name="fragment_auth_tvCurrentUserInfo_success_text">Вы успешно вошли!</string>
    <string name="fragment_auth_btAuth_success_text">Посмотреть детали</string>
    <string name="fragment_auth_btAuth_error_text">Войти</string>
    <string name="fragment_auth_tvCurrentUserInfo_error_text">Вы не авторизировались!</string>
    <string name="fragment_auth_tvFragmentAuthTitle_text">Профиль</string>
    <string name="layout_user_friends_tvTitle_text">Друзья</string>
    <string name="layout_user_history_tvTitle_text">История</string>

    <string name="spinner_no_selection_text">Добавить в список</string>
    <string name="spinner_completed_text">Просмотренно</string>
    <string name="spinner_dropped_text">Брошено</string>
    <string name="spinner_watching_text">Смотрю</string>
    <string name="spinner_planned_text">Запланировано</string>
    <string name="spinner_hold_on_text">Отложено</string>
    <string name="spinner_delete_text">Удалить из списка</string>

    <string name="title_settings_episode">"\nВведите количество эпизодов"</string>
    <string name="positive_button_settings_episode">Обновить</string>
    <string name="fragment_auth_btSignOut_text">Выйти</string>
    <string name="add_to_friends_text">Добавить в друзья</string>
    <string name="your_friend_text">Твой друг</string>
    <string name="fragment_auth_btDevAccount_text">Аккаунт Разработчика</string>
    <string name="search_friends_text">\nВведите ID друга</string>
    <string name="search_friends_button_text">Найти</string>
    <string name="posters_language_uk_text">Твоє аніме тепер \n українською!</string>
    <string name="posters_update_text">Затести обнову\nз нами!</string>
    <string name="posters_update_button_text">Гоуу!</string>
    <string name="posters_language_uk_button_text">В Настройки!</string>


    <string-array name="statuses">
        <item>@string/spinner_no_selection_text</item>
        <item>@string/spinner_completed_text</item>
        <item>@string/spinner_dropped_text</item>
        <item>@string/spinner_watching_text</item>
        <item>@string/spinner_planned_text</item>
        <item>@string/spinner_hold_on_text</item>
        <item>@string/spinner_delete_text</item>


    </string-array>
</resources>