<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glDetailsLineStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glDetailsLineEnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glDetailsLineTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/fragment_details_line_layout_constraintGuide" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/text_style_main_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:gravity="center"
        android:text="@string/dialog_setting_language_tvTitle_text"
        android:textSize="20dp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/glDetailsLineEnd"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/glDetailsLineStart"
        app:layout_constraintTop_toTopOf="@+id/glDetailsLineTop" />

    <Switch
        android:id="@+id/sIsTitle"
        style="@style/text_style_light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/dialog_setting_language_sIsTitle_text"
        app:layout_constraintEnd_toStartOf="@+id/glDetailsLineEnd"
        app:layout_constraintStart_toStartOf="@+id/glDetailsLineStart"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/btComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/dialog_setting_language_btComplete_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/glDetailsLineEnd"
        app:layout_constraintStart_toStartOf="@+id/glDetailsLineStart"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage" />

    <Switch
        android:id="@+id/sIsName"
        style="@style/text_style_light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:text="@string/dialog_setting_language_sIsName_text"
        app:layout_constraintEnd_toStartOf="@+id/glDetailsLineEnd"
        app:layout_constraintStart_toStartOf="@+id/glDetailsLineStart"
        app:layout_constraintTop_toBottomOf="@+id/sIsTitle"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tvMessage"
        style="@style/text_style_light"
        android:layout_width="0dp"
        android:layout_marginTop="16sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="4"
        android:textColor="@color/ukraine_message_color"
        android:text="@string/message_ukraine_language"
        app:layout_constraintEnd_toStartOf="@+id/glDetailsLineEnd"
        app:layout_constraintStart_toStartOf="@+id/glDetailsLineStart"
        app:layout_constraintTop_toBottomOf="@+id/sIsDescription" />
    <Switch
        android:id="@+id/sIsDescription"
        style="@style/text_style_light"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:text="@string/dialog_setting_language_sIsDescription_text"
        app:layout_constraintEnd_toStartOf="@+id/glDetailsLineEnd"
        app:layout_constraintStart_toStartOf="@+id/glDetailsLineStart"
        app:layout_constraintTop_toBottomOf="@+id/sIsName"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


</androidx.constraintlayout.widget.ConstraintLayout>